fix: spacing issues

--- a/src/components/background-control/editor.scss
+++ b/src/components/background-control/editor.scss
@@ -1,37 +1,16 @@
 .maxi-background-control {
-	.maxi-mediauploader-control {
-		&__replace {
-			display: none;
-		}
-		.maxi-background-control__image-edit,
-		.maxi-background-control__done-edition,
-		&__remove {
-			display: block;
-			position: absolute;
-			top: 100%;
-			transform: translateY(calc(-100% - 20px));
-			width: 40%;
-			height: 2rem;
-			background: #fff;
-			border: 1px solid #dddfe1;
-			border-radius: 2px;
-			box-shadow: none;
-			outline: none;
-			color: #000 !important;
-			font-size: 13px;
-			text-align: center;
-			text-decoration: none;
-			&:hover {
-				outline: none;
-				box-shadow: none;
-			}
-		}
-		.maxi-background-control__done-edition,
-		.maxi-background-control__image-edit {
-			right: 5%;
-		}
-		&__remove {
-			left: 5%;
-		}
+	& .maxi-settingstab-control .maxi-tabs-content {
+		padding-right: 0px !important;
+		padding-left: 0px !important;
+	}
+
+	& .maxi-mediauploader-control .maxi-mediauploader-control__toggle {
+		margin-right: 0;
+	}
+
+	& .maxi-mediauploader-control &__image-edit,
+	& .maxi-mediauploader-control &__video-edit,
+	& .maxi-mediauploader-control &__done-edition {
+		margin-right: 0px;
 	}
 }
